--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
             echo "this section will always run"
         }
 
-        sucess {
+        succss {
             echo "this section run when pipeline is success"
         }
 
