--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,10 +3,15 @@ pipeline {
         label 'AGENT-1'
     }
 
+    options {
+        timeout(time: 10, unit: 'SECONDS')
+    }
+
     stages {
         stage('Build') {
             steps {
                 echo 'Building..'
+                sh 'sleep 10'
             }
         }
         stage('Test') {
@@ -24,6 +29,7 @@ pipeline {
     post {
         always{
             echo "this section will always run"
+            deleteDir()
         }
 
         success {
