--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
     options {
         timeout(time: 10, unit: 'SECONDS')
         disableConcurrentBuilds()
+        retry(2)
     }
 
     stages {
