--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,9 +4,16 @@ pipeline {
     }
 
     options {
-        timeout(time: 10, unit: 'SECONDS')
+        timeout(time: 10, unit: 'MINUTES')
         disableConcurrentBuilds()
         retry(2)
+    }
+
+    parameters {
+        string(name: 'MAIN', defaultValue: 'main', description: 'Branch to build')
+
+        text(name: 'DESCRIPTION', defaultValue: 'This is a sample Jenkins pipeline', description: 'Description of the build')
+
     }
 
     stages {
@@ -26,6 +33,13 @@ pipeline {
                 echo 'Deploying...'
             }
         }
+
+        stage('print params')
+        {
+            steps{
+                echo "Branch to build: ${params.MAIN}"
+                echo "Description: ${params.DESCRIPTION}"
+            }
     }
 
     post {
