--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,6 +29,9 @@ pipeline {
             }
         }
         stage('Deploy') {
+            when{
+                branch "main"
+            }
             steps {
                 echo 'Deploying...'
             }
