--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,8 +30,8 @@ pipeline {
             }
         }
         stage('Deploy') {
-            when{
-                branch "main"
+            when {
+                //branch "main"
                 env.GIT_BRANCH == "origin/main"
             }
             steps {
