--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
         stage('Deploy') {
             when {
                 //branch "main"
-                env.GIT_BRANCH == "origin/main"
+                expression { return params.MAIN == 'main'
             }
             steps {
                 echo 'Deploying...'
